Fix #1550 Implement swipe to reply on mobile

--- a/app/Widgets/BottomNavigation/bottomnavigation.css
+++ b/app/Widgets/BottomNavigation/bottomnavigation.css
@@ -81,6 +81,7 @@ ul#bottomnavigation li:not(.active) div p {
 
     ul#bottomnavigation~main.enabled .button.action {
         opacity: 0;
+        pointer-events: none;
     }
 
     ul#bottomnavigation #bottomnavigation_me {
