--- a/public/theme/css/listn.css
+++ b/public/theme/css/listn.css
@@ -537,7 +537,7 @@ ul.list li>div.bubble {
     margin: 0 1.5rem;
     padding: 0;
     min-height: 5rem;
-    transition: background 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.1s, background 0.3s ease, box-shadow 0.3s ease;
 }
 
 ul.list li>div.bubble div[dir="rtl"] {
